Update how origin is set in application contexts.
git-svn-id: https://svn.apache.org/repos/asf/incubator/pivot/trunk@765660 13f79535-47bb-0310-9956-ffa450edef68